--- a/index.html
+++ b/index.html
@@ -35,6 +35,28 @@
             font-family: "Comfortaa";
             text-align: center;
         }
+        /* Fading */
+        @keyframes fade-in {
+            from {
+                opacity: 0;
+            }
+
+            to {
+                opacity: 1;
+            }
+        }
+
+        .fadein {
+            animation-name: fade-in;
+            animation-fill-mode: forwards;
+            animation-direction: normal;
+        }
+
+        .fadeout {
+            animation-name: fade-in;
+            animation-fill-mode: forwards;
+            animation-direction: reverse;
+        }
     </style>
     <script src="loading.js"></script>
 </head>
